--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -26,7 +26,7 @@ html lang="en" ng-app="beermap"
             input type="text" name="beer[price]"
             input type="submit" value="GNOLE !" 
 
-        .span8
+        .span8.map-wrapper
           #map
 
     script src="/js/app/app.js"
